<resources>
    <string name="app_name">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_universitas">Universitas</string>
    <string name="title_notifications">Pendidikan</string>
    <string name="title_profile">Profile</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string-array name="data_name">
        <item>Universitas Indonesia</item>
        <item>Universitas Gajah Mada</item>
        <item>Institut Teknologi Bandung</item>
        <item>Universitas Hasanudin</item>
        <item>Universitas Padjajaran</item>
        <item>Universitas Airlangga</item>
        <item>Universitas Sebelas Maret</item>
        <item>Universitas Brawijaya</item>
        <item>Universitas Negeri Semarang</item>
        <item>Institut Teknologi Sepuluh November</item>
        <item>Universitas Muhammadiyah Surakarta</item>
        <item>Telkom University</item>
        <item>Institut Pertanian Bogor</item>
        <item>Universitas Diponegoro</item>
        <item>Universitas Tarumanegara</item>
    </string-array>
    <string name="gambarbebas">gambarbebas</string>
    <string name="text_profile">This is profile fragment</string>
    <string name="text_tahun_smp">2016–2019\nSMPN 1 Karanganyar</string>
    <string name="text_tahun_sma">2019–2022\nSMAN 1 Surakarta</string>
    <string name="text_tahun_uns">2022-Sekarang\nUniversitas Sebelas Maret</string>
    <string name="text_pendidikan_smp">Akreditasi : A\nJl. Ir. Juanda No.18, Beji, Bejen, Kec. Karanganyar, Kabupaten Karanganyar, Jawa Tengah 57716</string>
    <string name="text_pendidikan_sma">Jurusan MIPA\nAkreditasi : A\nJl. Monginsidi No.40, Gilingan, Banjarsari, Surakarta, Jawa Tengah, Indonesia</string>
    <string name="text_pendidikan_uns">Program Studi Informatika\nFakultas Teknologi Informasi dan Sains Data\nAkreditasi : Unggul\nKentingan Jl. Ir. Sutami No.36, Jebres, Kec. Jebres, Kota Surakarta, Jawa Tengah 57126</string>
    <string name="title_personalinformation">Profile Information</string>
    <string name="profilename">Gardasvara Mistortoify</string>
    <string name="profilenim">L0122068</string>
    <string name="profileprodi">Informatika / 2022</string>
    <string name="profilefakultas">Fakultas Teknologi Informasi dan Sains Data</string>
    <string name="profileuniversitas">Univeristas Sebelas Maret</string>
    <string name="profileemail">alovegardasvara@gmail.com</string>
    <string name="share_button">Share</string>
    <string name="back_button">Back</string>
    <string name="website">Website</string>
    <string name="wikipedia">Wikipedia</string>
    <string name="maps">GoogleMaps</string>
</resources>