<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="univ"
            type="com.example.bottomnavigation.ui.project.DataUniv" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:contentDescription="@string/gambarbebas"
            android:imageResource="@{univ.data_img}"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
        <TextView
            android:id="@+id/textViewName"
            android:layout_width="357dp"
            android:layout_height="59dp"
            android:text="@{univ.data_name}"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.462"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.339" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="362dp"
            android:layout_height="232dp"
            app:layout_constraintBottom_toTopOf="@id/buttonWeb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewName"
            app:layout_constraintVertical_bias="0.0">
            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6sp"
                android:text="@{univ.data_desc}"
                android:textSize="16sp" />
        </ScrollView>

        <ImageButton
            android:id="@+id/buttonWeb"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="55dp"
            android:background="@drawable/rectangle_button_background"
            android:contentDescription="@string/website"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.158"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8"
            app:srcCompat="@drawable/ic_website" />
        <ImageButton
            android:id="@+id/buttonWiki"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/rectangle_button_background"
            android:contentDescription="@string/wikipedia"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.816"
            app:srcCompat="@drawable/ic_wiki" />
        <ImageButton
            android:id="@+id/buttonMaps"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="55dp"
            android:background="@drawable/rectangle_button_background"
            android:contentDescription="@string/maps"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.856"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8"
            app:srcCompat="@drawable/ic_maps2" />

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="125dp"
            android:layout_height="56dp"
            android:backgroundTint="@color/secondary"
            android:drawableLeft="@drawable/ic_back"
            android:text="@string/back_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.917" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>